[package]
authors = [ "Ricardo Martins <ricardo@scarybox.net>", "Ogier Bouvier <ogier.bouvier@epfl.ch" ]
description = "An async µTP (Micro/uTorrent Transport Library) library for Tokio"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/meqif/rust-utp"
keywords = [ "async", "utp", "networking", "protocol", "transport" ]
license = "MIT/Apache-2.0"
name = "utp"
readme = "README.md"
repository = "https://github.com/SonicFrog/tokio-utp"
version = "0.8.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2.9", features = [ "udp", "time", "macros", "rt-core", "io-util", "sync" ] }
log = "0.4.7"
num-traits = "0.1"
rand = "0.3"
tracing = "0.1.12"
tracing-futures = "0.2.1"

[dev-dependencies]
quickcheck = "0.4"
tracing-subscriber = { version = "0.2.0-alpha.4", features = [ "fmt" ] }

[lib]
name = "utp"

[features]
unstable = []
